- minor css fix for xhtml form group elements - scrollbar added to the preview popup up window
git-svn-id: http://vcs.taotesting.com/svn/oat/projects/taoItems/trunk@3810 62dfeb86-a93f-4914-9d13-15c0a160985d

--- a/views/css/qtiAuthoring.css
+++ b/views/css/qtiAuthoring.css
@@ -94,7 +94,7 @@ span.choice-button-delete, span.choice-button-advanced, span.choice-button-up, s
 }
 
 /*advanced choice properties group offset*/
-div.xhtml_form div.form-group{
+div.formContainer_choice div.xhtml_form div.form-group{
 	position:relative;
 	left:20px;
 	top:15px;
